crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badSkelBindingAPIApplied.usda
version https://git-lfs.github.com/spec/v1
oid sha256:745d891ff97d8372bdaf8baae1af1e3daa3add5bb55704b1393eb830eef19f26
size 167
